FONT/src/parser/Asl.g
/**
 * Copyright (c) 2011, Jordi Cortadella
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *    * Redistributions of source code must retain the above copyright
 *      notice, this list of conditions and the following disclaimer.
 *    * Redistributions in binary form must reproduce the above copyright
 *      notice, this list of conditions and the following disclaimer in the
 *      documentation and/or other materials provided with the distribution.
 *    * Neither the name of the <organization> nor the
 *      names of its contributors may be used to endorse or promote products
 *      derived from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL <COPYRIGHT HOLDER> BE LIABLE FOR ANY
 * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
 * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/

grammar Asl;

options {
    output = AST;
    ASTLabelType = AslTree;
}

// Imaginary tokens to create some AST nodes
tokens {
    LIST_FUNCTIONS;     // List of functions (the root of the tree)
    ASSIGN;             // Assignment instruction
    PARAMS;             // List of parameters in the declaration of a function
    FUNCALL;            // Function call
    ARGLIST;            // List of arguments passed in a function call
    LIST_INSTR;         // Block of instructions
    BOOLEAN;            // Boolean atom (for Boolean constants "true" or "false")
    PVALUE;             // Parameter by value in the list of parameters
    PREF;               // Parameter by reference in the list of parameters
    SMOTOR;
    DMOTOR;
    GMOTOR;
    GSENSOR;
    DSENSOR;
    SSLEEP;
    LIST_INCLUDES;
    INCL;
    PROG;
    OBJ_FUNC;
    LIST_GLOBALS;
    GLOB;
}

@header {
    package parser;
    import interp.AslTree;
}

@lexer::header {
    package parser;
}


// A program is a list of includes, a list of global variables and a list of functions
prog    : list_includes list_globals list_funcs -> ^(PROG list_includes list_globals list_funcs)
        ;

list_includes
        : include* -> ^(LIST_INCLUDES include*)
        ;
    
list_globals
        : (global ';')* -> ^(LIST_GLOBALS global*)
        ;
    
list_funcs
        : func+ EOF -> ^(LIST_FUNCTIONS func+)
        ;
            
include : INCLUDE p=ID'/'f=ID -> ^(INCL $p $f) 
        ;
    
global  : t=ID id=ID -> ^(GLOB $t $id)
        | TIPO ID -> ^(GLOB TIPO ID)
        ;
            
// A function has a name, a list of parameters and a block of instructions
func    : t=ID id=ID params block_instructions return_stmt ENDFUNC -> ^(FUNC $t $id params block_instructions return_stmt)
        | TIPO ID params block_instructions return_stmt ENDFUNC -> ^(FUNC TIPO ID params block_instructions return_stmt)
        | VOID ID params block_instructions ENDFUNC -> ^(FUNC VOID ID params block_instructions)
        ;

// The list of parameters grouped in a subtree (it can be empty)
params  : '(' paramlist? ')' -> ^(PARAMS paramlist?)
        ;

// Parameters are separated by commas
paramlist
        : param (','! param)*
        ;

// Parameters with & as prefix are passed by reference
// Only one node with the name of the parameter is created
param   : TIPO id=ID -> ^(PVALUE TIPO ID)
        | t=ID id=ID -> ^(PVALUE $t $id)
        ;

// A list of instructions, all of them gouped in a subtree
block_instructions
        : instruction (';' instruction)* -> ^(LIST_INSTR instruction+)
        ;

// The different types of instructions
instruction
        : assign        // Assignment
        | ite_stmt      // if-then-else
        | while_stmt    // while statement
        | funcall       // Call to a procedure (no result produced)
        | read          // Read a variable
        | write         // Write a string or an expression
        |               // Nothing
        | motor         // 
        | obj_fun
        | sleep         //
        ; 
        
obj_fun : ID '.' funcall -> ^(OBJ_FUNC ID funcall)
        ;

motor   : ID '.' AVANZAR '(' (e1=expr (','e2=expr)?)? ')' -> ^(SMOTOR AVANZAR ID $e1? $e2?)
        | ID '.' PARAR '('')' -> ^(SMOTOR PARAR ID)
        | ID '.' MSETTER '(' expr ')' -> ^(SMOTOR MSETTER ID expr)
        ;
        
sleep   : SLEEP '(' expr? ')' -> ^(SSLEEP expr?)
        ;

// Assignment
assign  : esq eq=EQUAL expr -> ^(ASSIGN[$eq,":="] esq expr)
        ;
        
esq     : ID
        ;

// if-then-else (else is optional)
ite_stmt: IF^ expr THEN! block_instructions (ELSE! block_instructions)? ENDIF!
        ;

// while statement
while_stmt
        : WHILE^ expr DO! block_instructions ENDWHILE!
        ;

// Return statement with an expression
return_stmt
        : RETURN^ expr ';'!
        ;

// Read a variable
read    : READ^ esq
        ;

// Write an expression or a string
write   : WRITE^ (expr | STRING )
        ;

// Grammar for expressions with boolean, relational and aritmetic operators
expr    : boolterm (OR^ boolterm)*
        ;

boolterm: boolfact (AND^ boolfact)*
        ;

boolfact: num_expr ((EQUAL^ | NOT_EQUAL^ | LT^ | LE^ | GT^ | GE^) num_expr)?
        ;

num_expr: term ( (PLUS^ | MINUS^) term)*
        ;

term    : factor ( (MUL^ | DIV^ | MOD^) factor)*
        ;

factor  : (NOT^ | PLUS^ | MINUS^)? atom
        ;

// Atom of the expressions (variables, integer and boolean literals).
// An atom can also be a function call or another expression
// in parenthesis
atom    : ID 
        | INT
        | m=MOTOR '(' b=INT ')' -> ^(DMOTOR[m, "MOTOR"+$b.text])
        | s=SENSOR '(' b=INT ')' -> ^(DSENSOR[s, $s.text+$b.text])
        | (b=TRUE | b=FALSE) -> ^(BOOLEAN[$b,$b.text])
        | funcall
        | obj_fun
        | '('! expr ')'!
        | ID '.' (b=GETCOLOR | b=GETULTRA | b=GETTOUCH) '(' ')' -> ^(GSENSOR $b ID)
        | ID'.' b=MGETTER '(' ')' -> ^(GMOTOR $b ID)
        | OBJECT '(' ID ')'-> ^(OBJECT ID)
        ;	

// A function call has a lits of arguments in parenthesis (possibly empty)
funcall : ID '(' expr_list? ')' -> ^(FUNCALL ID ^(ARGLIST expr_list?))
        ;

// A list of expressions separated by commas
expr_list
        : expr (','! expr)*
        ;

// Basic tokens
EQUAL           : '=' ;
NOT_EQUAL       : '!=' ;
LT              : '<' ;
LE              : '<=' ;
GT              : '>' ;
GE              : '>=' ;
PLUS            : '+' ;
MINUS           : '-' ;
MUL             : '*' ;
DIV             : '/' ;
MOD             : '%' ;
INCLUDE         : 'include';
NOT             : 'not' ;
AND             : 'and' ;
OR              : 'or' ;
IF              : 'if' ;
THEN            : 'then' ;
ELSE            : 'else' ;
ENDIF           : 'endif' ;
WHILE           : 'while' ;
DO              : 'do' ;
ENDWHILE        : 'endwhile' ;
FUNC            : 'func' ;
ENDFUNC         : 'endfunc' ;
RETURN          : 'return' ;
READ            : 'read' ;
WRITE           : 'write' ;
TRUE            : 'true' ;
FALSE           : 'false';
VOID            : 'void';
TIPO            : ('int'|'bool'|'motor'|'touch'|'ultra'|'color');
AVANZAR         : 'avanzar' | 'retroceder' ;
PARAR           : 'parar' ;
MSETTER         : ('setSpeed' | 'setPower');
MGETTER         : ('getSpeed' | 'getPower' | 'isMoving' );
GETCOLOR        : 'getColor' ;
GETULTRA        : 'getUltrasonic' ;
GETTOUCH        : 'getTouch' ;
MOTOR           : 'MOTOR';
SENSOR          : ('ULTRA'|'TOUCH'|'COLOR');
OBJECT          : 'OBJECT';
SLEEP           : 'sleep' ;

// funciones reservadas ---------------------------------------------------------------------------------- //



ID              : ('a'..'z'|'A'..'Z'|'_') ('a'..'z'|'A'..'Z'|'0'..'9'|'_')* ;
INT             : '-'? '0'..'9'+ ;

// C-style comments
COMMENT : '//' ~('\n'|'\r')* '\r'? '\n' {$channel=HIDDEN;}
        | '/*' ( options {greedy=false;} : . )* '*/' {$channel=HIDDEN;}
        ;

// Strings (in quotes) with escape sequences        
STRING  : '"' ( ESC_SEQ | ~('\\'|'"') )* '"'
        ;

fragment
ESC_SEQ : '\\' ('b'|'t'|'n'|'f'|'r'|'\"'|'\''|'\\')
        ;

// White spaces
WS      : ( ' ' | '\t' | '\r' | '\n' ) {$channel=HIDDEN;}
        ;
