FONT/src/parser/AslParser.java
// $ANTLR 3.4 /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g 2015-05-30 21:33:36

    package parser;
    import interp.AslTree;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


/**
 * Copyright (c) 2011, Jordi Cortadella
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *    * Redistributions of source code must retain the above copyright
 *      notice, this list of conditions and the following disclaimer.
 *    * Redistributions in binary form must reproduce the above copyright
 *      notice, this list of conditions and the following disclaimer in the
 *      documentation and/or other materials provided with the distribution.
 *    * Neither the name of the <organization> nor the
 *      names of its contributors may be used to endorse or promote products
 *      derived from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL <COPYRIGHT HOLDER> BE LIABLE FOR ANY
 * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
 * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/
@SuppressWarnings({"all", "warnings", "unchecked"})
public class AslParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARGLIST", "ASSIGN", "AVANZAR", "BOOLEAN", "COMMENT", "DIV", "DMOTOR", "DO", "DSENSOR", "ELSE", "ENDFUNC", "ENDIF", "ENDWHILE", "EQUAL", "ESC_SEQ", "FALSE", "FUNC", "FUNCALL", "GE", "GETCOLOR", "GETTOUCH", "GETULTRA", "GLOB", "GMOTOR", "GSENSOR", "GT", "ID", "IF", "INCL", "INCLUDE", "INT", "LE", "LIST_FUNCTIONS", "LIST_GLOBALS", "LIST_INCLUDES", "LIST_INSTR", "LT", "MGETTER", "MINUS", "MOD", "MOTOR", "MSETTER", "MUL", "NOT", "NOT_EQUAL", "OBJECT", "OBJ_FUNC", "OR", "PARAMS", "PARAR", "PLUS", "PREF", "PROG", "PVALUE", "READ", "RETURN", "SENSOR", "SLEEP", "SMOTOR", "SSLEEP", "STRING", "THEN", "TIPO", "TRUE", "VOID", "WHILE", "WRITE", "WS", "'('", "')'", "','", "'.'", "';'"
    };

    public static final int EOF=-1;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int AND=4;
    public static final int ARGLIST=5;
    public static final int ASSIGN=6;
    public static final int AVANZAR=7;
    public static final int BOOLEAN=8;
    public static final int COMMENT=9;
    public static final int DIV=10;
    public static final int DMOTOR=11;
    public static final int DO=12;
    public static final int DSENSOR=13;
    public static final int ELSE=14;
    public static final int ENDFUNC=15;
    public static final int ENDIF=16;
    public static final int ENDWHILE=17;
    public static final int EQUAL=18;
    public static final int ESC_SEQ=19;
    public static final int FALSE=20;
    public static final int FUNC=21;
    public static final int FUNCALL=22;
    public static final int GE=23;
    public static final int GETCOLOR=24;
    public static final int GETTOUCH=25;
    public static final int GETULTRA=26;
    public static final int GLOB=27;
    public static final int GMOTOR=28;
    public static final int GSENSOR=29;
    public static final int GT=30;
    public static final int ID=31;
    public static final int IF=32;
    public static final int INCL=33;
    public static final int INCLUDE=34;
    public static final int INT=35;
    public static final int LE=36;
    public static final int LIST_FUNCTIONS=37;
    public static final int LIST_GLOBALS=38;
    public static final int LIST_INCLUDES=39;
    public static final int LIST_INSTR=40;
    public static final int LT=41;
    public static final int MGETTER=42;
    public static final int MINUS=43;
    public static final int MOD=44;
    public static final int MOTOR=45;
    public static final int MSETTER=46;
    public static final int MUL=47;
    public static final int NOT=48;
    public static final int NOT_EQUAL=49;
    public static final int OBJECT=50;
    public static final int OBJ_FUNC=51;
    public static final int OR=52;
    public static final int PARAMS=53;
    public static final int PARAR=54;
    public static final int PLUS=55;
    public static final int PREF=56;
    public static final int PROG=57;
    public static final int PVALUE=58;
    public static final int READ=59;
    public static final int RETURN=60;
    public static final int SENSOR=61;
    public static final int SLEEP=62;
    public static final int SMOTOR=63;
    public static final int SSLEEP=64;
    public static final int STRING=65;
    public static final int THEN=66;
    public static final int TIPO=67;
    public static final int TRUE=68;
    public static final int VOID=69;
    public static final int WHILE=70;
    public static final int WRITE=71;
    public static final int WS=72;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AslParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AslParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return AslParser.tokenNames; }
    public String getGrammarFileName() { return "/home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:71:1: prog : list_includes list_globals list_funcs -> ^( PROG list_includes list_globals list_funcs ) ;
    public final AslParser.prog_return prog() throws RecognitionException {
        AslParser.prog_return retval = new AslParser.prog_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        AslParser.list_includes_return list_includes1 =null;

        AslParser.list_globals_return list_globals2 =null;

        AslParser.list_funcs_return list_funcs3 =null;


        RewriteRuleSubtreeStream stream_list_includes=new RewriteRuleSubtreeStream(adaptor,"rule list_includes");
        RewriteRuleSubtreeStream stream_list_globals=new RewriteRuleSubtreeStream(adaptor,"rule list_globals");
        RewriteRuleSubtreeStream stream_list_funcs=new RewriteRuleSubtreeStream(adaptor,"rule list_funcs");
        try {
            // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:71:9: ( list_includes list_globals list_funcs -> ^( PROG list_includes list_globals list_funcs ) )
            // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:71:11: list_includes list_globals list_funcs
            {
            pushFollow(FOLLOW_list_includes_in_prog317);
            list_includes1=list_includes();

            state._fsp--;

            stream_list_includes.add(list_includes1.getTree());

            pushFollow(FOLLOW_list_globals_in_prog319);
            list_globals2=list_globals();

            state._fsp--;

            stream_list_globals.add(list_globals2.getTree());

            pushFollow(FOLLOW_list_funcs_in_prog321);
            list_funcs3=list_funcs();

            state._fsp--;

            stream_list_funcs.add(list_funcs3.getTree());

            // AST REWRITE
            // elements: list_globals, list_includes, list_funcs
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 71:49: -> ^( PROG list_includes list_globals list_funcs )
            {
                // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:71:52: ^( PROG list_includes list_globals list_funcs )
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(PROG, "PROG")
                , root_1);

                adaptor.addChild(root_1, stream_list_includes.nextTree());

                adaptor.addChild(root_1, stream_list_globals.nextTree());

                adaptor.addChild(root_1, stream_list_funcs.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class list_includes_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "list_includes"
    // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:74:1: list_includes : ( include )* -> ^( LIST_INCLUDES ( include )* ) ;
    public final AslParser.list_includes_return list_includes() throws RecognitionException {
        AslParser.list_includes_return retval = new AslParser.list_includes_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        AslParser.include_return include4 =null;


        RewriteRuleSubtreeStream stream_include=new RewriteRuleSubtreeStream(adaptor,"rule include");
        try {
            // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:75:9: ( ( include )* -> ^( LIST_INCLUDES ( include )* ) )
            // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:75:11: ( include )*
            {
            // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:75:11: ( include )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==INCLUDE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:75:11: include
            	    {
            	    pushFollow(FOLLOW_include_in_list_includes358);
            	    include4=include();

            	    state._fsp--;

            	    stream_include.add(include4.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // AST REWRITE
            // elements: include
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 75:20: -> ^( LIST_INCLUDES ( include )* )
            {
                // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:75:23: ^( LIST_INCLUDES ( include )* )
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(LIST_INCLUDES, "LIST_INCLUDES")
                , root_1);

                // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:75:39: ( include )*
                while ( stream_include.hasNext() ) {
                    adaptor.addChild(root_1, stream_include.nextTree());

                }
                stream_include.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "list_includes"


    public static class list_globals_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "list_globals"
    // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:78:1: list_globals : ( global ';' )* -> ^( LIST_GLOBALS ( global )* ) ;
    public final AslParser.list_globals_return list_globals() throws RecognitionException {
        AslParser.list_globals_return retval = new AslParser.list_globals_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token char_literal6=null;
        AslParser.global_return global5 =null;


        AslTree char_literal6_tree=null;
        RewriteRuleTokenStream stream_77=new RewriteRuleTokenStream(adaptor,"token 77");
        RewriteRuleSubtreeStream stream_global=new RewriteRuleSubtreeStream(adaptor,"rule global");
        try {
            // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:79:9: ( ( global ';' )* -> ^( LIST_GLOBALS ( global )* ) )
            // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:79:11: ( global ';' )*
            {
            // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:79:11: ( global ';' )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ID) ) {
                    int LA2_1 = input.LA(2);

                    if ( (LA2_1==ID) ) {
                        int LA2_4 = input.LA(3);

                        if ( (LA2_4==77) ) {
                            alt2=1;
                        }


                    }


                }
                else if ( (LA2_0==TIPO) ) {
                    int LA2_2 = input.LA(2);

                    if ( (LA2_2==ID) ) {
                        int LA2_5 = input.LA(3);

                        if ( (LA2_5==77) ) {
                            alt2=1;
                        }


                    }


                }


                switch (alt2) {
            	case 1 :
            	    // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:79:12: global ';'
            	    {
            	    pushFollow(FOLLOW_global_in_list_globals398);
            	    global5=global();

            	    state._fsp--;

            	    stream_global.add(global5.getTree());

            	    char_literal6=(Token)match(input,77,FOLLOW_77_in_list_globals400);  
            	    stream_77.add(char_literal6);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            // AST REWRITE
            // elements: global
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 79:25: -> ^( LIST_GLOBALS ( global )* )
            {
                // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:79:28: ^( LIST_GLOBALS ( global )* )
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(LIST_GLOBALS, "LIST_GLOBALS")
                , root_1);

                // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:79:43: ( global )*
                while ( stream_global.hasNext() ) {
                    adaptor.addChild(root_1, stream_global.nextTree());

                }
                stream_global.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "list_globals"


    public static class list_funcs_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "list_funcs"
    // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:82:1: list_funcs : ( func )+ EOF -> ^( LIST_FUNCTIONS ( func )+ ) ;
    public final AslParser.list_funcs_return list_funcs() throws RecognitionException {
        AslParser.list_funcs_return retval = new AslParser.list_funcs_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token EOF8=null;
        AslParser.func_return func7 =null;


        AslTree EOF8_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_func=new RewriteRuleSubtreeStream(adaptor,"rule func");
        try {
            // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:83:9: ( ( func )+ EOF -> ^( LIST_FUNCTIONS ( func )+ ) )
            // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:83:11: ( func )+ EOF
            {
            // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:83:11: ( func )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID||LA3_0==TIPO||LA3_0==VOID) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:83:11: func
            	    {
            	    pushFollow(FOLLOW_func_in_list_funcs440);
            	    func7=func();

            	    state._fsp--;

            	    stream_func.add(func7.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            EOF8=(Token)match(input,EOF,FOLLOW_EOF_in_list_funcs443);  
            stream_EOF.add(EOF8);


            // AST REWRITE
            // elements: func
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 83:21: -> ^( LIST_FUNCTIONS ( func )+ )
            {
                // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:83:24: ^( LIST_FUNCTIONS ( func )+ )
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(LIST_FUNCTIONS, "LIST_FUNCTIONS")
                , root_1);

                if ( !(stream_func.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_func.hasNext() ) {
                    adaptor.addChild(root_1, stream_func.nextTree());

                }
                stream_func.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "list_funcs"


    public static class include_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "include"
    // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:86:1: include : INCLUDE p= ID '/' f= ID -> ^( INCL $p $f) ;
    public final AslParser.include_return include() throws RecognitionException {
        AslParser.include_return retval = new AslParser.include_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token p=null;
        Token f=null;
        Token INCLUDE9=null;
        Token char_literal10=null;

        AslTree p_tree=null;
        AslTree f_tree=null;
        AslTree INCLUDE9_tree=null;
        AslTree char_literal10_tree=null;
        RewriteRuleTokenStream stream_DIV=new RewriteRuleTokenStream(adaptor,"token DIV");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_INCLUDE=new RewriteRuleTokenStream(adaptor,"token INCLUDE");

        try {
            // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:86:9: ( INCLUDE p= ID '/' f= ID -> ^( INCL $p $f) )
            // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:86:11: INCLUDE p= ID '/' f= ID
            {
            INCLUDE9=(Token)match(input,INCLUDE,FOLLOW_INCLUDE_in_include481);  
            stream_INCLUDE.add(INCLUDE9);


            p=(Token)match(input,ID,FOLLOW_ID_in_include485);  
            stream_ID.add(p);


            char_literal10=(Token)match(input,DIV,FOLLOW_DIV_in_include486);  
            stream_DIV.add(char_literal10);


            f=(Token)match(input,ID,FOLLOW_ID_in_include489);  
            stream_ID.add(f);


            // AST REWRITE
            // elements: f, p
            // token labels: f, p
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_f=new RewriteRuleTokenStream(adaptor,"token f",f);
            RewriteRuleTokenStream stream_p=new RewriteRuleTokenStream(adaptor,"token p",p);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 86:31: -> ^( INCL $p $f)
            {
                // /home/ester/Documentos/CL/Proyecto/robot-cl/FONT/src/parser/Asl.g:86:34: ^( INCL $p $f)
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(INCL, "INCL")
                , root_1);

                adaptor.addChild(root_1, stream_p.nextNode());
